Integrate notifications (#87)
* Integrate notifications

* Modify github action logs